# GPU

./: main.c
arraySum/: CMakeLists.txt  a.out  main.cpp  serialCode.cpp  sum_vec  vector_add  wrongCode.cpp
dotProcduct/: dot_prodcut  main.cpp
gangs/: async_usage.c  multigangs.c  singleGang.c  twoGangs.c
helloWorld/: hello.c
matrix_multiplication/: main.cpp
properties/: dev_props  device_properties.cu
